# django-erp

./: .gitignore  README.md  pyproject.toml
erp/: base_admin.py  base_model.py  settings.py  urls.py
erp/company/: admin.py  apps.py  models.py
erp/company/migrations/: 0001_initial.py  0002_initial.py  0003_company_logo_historicalcompany_logo.py  0004_alter_company_options_and_more.py  0005_alter_company_email_alter_company_fantasy_name_and_more.py  0006_alter_company_tax_number_and_more.py  0007_alter_company_chain_and_more.py
erp/customer/: admin.py  apps.py  models.py
erp/customer/migrations/: 0001_initial.py  0002_initial.py  0003_alter_customer_address_alter_customer_email_and_more.py  0004_alter_customer_options_and_more.py  0005_alter_customer_company_and_more.py
erp/invoice/: admin.py  apps.py  helpers.py  models.py
erp/invoice/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_historicalinvoice_options_and_more.py  0006_alter_historicalinvoice_invoice_number_and_more.py  0007_alter_historicalinvoice_company_and_more.py  0008_alter_historicalinvoiceitem_product_and_more.py
erp/product/: admin.py  apps.py  models.py
erp/product/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_historicallistprice_options_and_more.py  0005_alter_historicalproduct_options_and_more.py  0006_alter_historicallistprice_company_and_more.py  0007_alter_historicalproduct_options_and_more.py
erp/tax/: admin.py  apps.py  models.py
erp/tax/migrations/: 0001_initial.py  (+4 more)
erp/user/: admin.py  models.py
(+7 files in other folders)
